US_PSW-8648 CLONE - Mosaic Dashboard - UI
add mosaic framework

--- a/angular.json
+++ b/angular.json
@@ -25,9 +25,11 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/libs"
             ],
             "styles": [
+              "node_modules/@advanced/mosaic-styles/css/mosaic-no-fonts.css",
               "node_modules/ngx-toastr/toastr.css",
               "src/styles.scss"
             ],
@@ -90,9 +92,12 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/libs"
             ],
             "styles": [
+              "node_modules/@advanced/mosaic-styles/css/mosaic-no-fonts.css",
+              "node_modules/ngx-toastr/toastr.css",
               "src/styles.scss"
             ],
             "scripts": []
