--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    "paths": {
+      "~components/*": ["src/app/components/*"],
+      "~views/*": ["src/app/views/*"]
+    },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
