--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@advanced/mosaic-components": "^13.8.0",
     "@advanced/mosaic-icons": "^2.1.0",
+    "@advanced/mosaic-styles": "^2.2.1",
     "@angular/animations": "~9.0.5",
     "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.5",
