--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@advanced/mosaic-components": "^13.8.0",
     "@advanced/mosaic-icons": "^2.1.0",
-    "@advanced/mosaic-styles": "^2.2.1",
     "@angular/animations": "~9.0.5",
     "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.5",
@@ -23,7 +22,9 @@
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "jquery": "^3.4.1",
     "ngx-toastr": "^12.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
