--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@advanced/mosaic-components": "^13.8.0",
     "@advanced/mosaic-icons": "^2.1.0",
-    "@angular/animations": "~9.0.5",
+    "@angular/animations": "^9.0.6",
     "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.5",
     "@angular/core": "~9.0.5",
@@ -25,6 +25,7 @@
     "jquery": "^3.4.1",
     "ngx-toastr": "^12.0.0",
     "popper.js": "^1.16.1",
+    "ramda": "^0.27.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
