--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.js",
     "startOnOtherPort": "ng serve --proxy-config proxy.conf.js --port 4202",
-    "build": "ng build",
+    "build": "ng build --prod --base-href=\"https://haimei-zhang-oneadvanced.github.io/cmp-angular-dashboard-ui/\"",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
